--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.2.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:23.1.1'
+    implementation 'com.github.clans:fab:1.6.4'
 
 
 
